--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-    <h1>Opciones de Chips</h1>
-    <p>Hay varios chips diferentes de <em>AMD</em> para elegir:</p>
+    <h1>Opciones de Procesadores</h1>
+    <p>Hay varios chips de <em>AMD</em> para elegir:</p>
 
     <ol>
         <li>
@@ -59,6 +59,12 @@
             <td>Servidor/procesador de 64 bits de gama alta. Para servidores de gama alta</td>
         </tr>
     </table>
+    <hr>
+
+    <h2>Procesador Intel</h2>
+    <p>Hay varios chips de <em>Intel</em> para elegir:</p>
+
+
 
 
 
