--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <ol>
         <li>
-            Duran
+            Duron
         </li>
         <li>
             Sempron
@@ -63,6 +63,58 @@
 
     <h2>Procesador Intel</h2>
     <p>Hay varios chips de <em>Intel</em> para elegir:</p>
+    <ol>
+        <li>
+            Celeron
+        </li>
+        <li>
+            Celeron D
+        </li>
+        <li>
+            Pentium 3
+        </li>
+        <li>
+            Pentium 4
+        </li>
+        <li>
+            Pentium D
+        </li>
+        <li>
+            Xeon
+        </li>
+        </ol><h3><strong>Intel Chips</strong></h3>
+
+        <table class="encabezado">
+            <tr>
+                <th class="parte-superior-derecha">Chips</th>
+                <th class="parte-superior-izquierda">Descripcion</th>
+            </tr>
+            <tr>
+                <td>Celeron</td>
+                <td>Es la familia de chips económicos de Intel. Celeron es una buena opción para un ordenador económico, ya que ofrece rendimiento suficiente para un uso informático general</td>
+            </tr>
+            <tr>
+                <td>Celeron D </td>
+                <td>la última incorporación de Intel a la familia Celeron, más rápido que el Celeron normal, pero todavía más barato.</td>
+            </tr>
+            <tr>
+                <td>Pentium 3</td>
+                <td> es el actual chip de gama media de Intel</td>
+            </tr>
+            <tr>
+                <td>Pentium 4</td>
+                <td> Puede utilizarse en placas base compatibles con multiprocesadores</td>
+            </tr>
+            <tr>
+                <td>Pentium D</td>
+                <td>Es un chip de doble núcleo de gama alta. Contiene dos chips Pentium, es decir, dos procesadores en un solo chip.</td>
+            </tr>
+            <tr>
+                <td>Opteron</td>
+                <td> Una versión de gama alta del Xeon Pentium 4, diseñada para ordenadores de servidor y sistemas multiprocesador</td>
+            </tr>
+        </table>
+
 
 
 
