--- a/index.html
+++ b/index.html
@@ -34,30 +34,33 @@
             <th class="parte-superior-derecha">Chips</th>
             <th class="parte-superior-izquierda">Descripcion</th>
         </tr>
-        <tr>
-            <td>Duron</td>
-            <td>Duron salió al mercado en el verano de 2000 como una alternativa económica a los procesadores Athlon de AMD, Pentium III de Intel y Celeron de Intel Duron es compatible con Athlon, casi indistinguible, y funciona en la misma placa base en la mayoría de los casos Duron es una buena opción para un ordenador económico.</td>
-        </tr>
-        <tr>
-            <td>Sempron</td>
-            <td>El Sempron es el último procesador de gama baja de AMD. Sustituye al procesador Duron y competirá con el procesador Celeron D de Intel para un ordenador económico, si la diferencia de precio entre Duron y Sempron es pequeña, elija Sempron</td>
-        </tr>
-        <tr>
-            <td>Athlon</td>
-            <td>Este es el procesador de gama media de AMD.</td>
-        </tr>
-        <tr>
-            <td>Athlon MP</td>
-            <td> Puede utilizarse en placas base compatibles con multiprocesadores</td>
-        </tr>
-        <tr>
-            <td>Athlon 64</td>
-            <td>Procesador de 64 bits de calidad de consumidor para sistemas de gama alta</td>
-        </tr>
-        <tr>
-            <td>Opteron</td>
-            <td>Servidor/procesador de 64 bits de gama alta. Para servidores de gama alta</td>
-        </tr>
+        <tbody>
+            <tr>
+                <td>Duron</td>
+                <td>Duron salió al mercado en el verano de 2000 como una alternativa económica a los procesadores Athlon de AMD, Pentium III de Intel y Celeron de Intel Duron es compatible con Athlon, casi indistinguible, y funciona en la misma placa base en la mayoría de los casos Duron es una buena opción para un ordenador económico.</td>
+            </tr>
+            <tr>
+                <td>Sempron</td>
+                <td>El Sempron es el último procesador de gama baja de AMD. Sustituye al procesador Duron y competirá con el procesador Celeron D de Intel para un ordenador económico, si la diferencia de precio entre Duron y Sempron es pequeña, elija Sempron</td>
+            </tr>
+            <tr>
+                <td>Athlon</td>
+                <td>Este es el procesador de gama media de AMD.</td>
+            </tr>
+            <tr>
+                <td>Athlon MP</td>
+                <td> Puede utilizarse en placas base compatibles con multiprocesadores</td>
+            </tr>
+            <tr>
+                <td>Athlon 64</td>
+                <td>Procesador de 64 bits de calidad de consumidor para sistemas de gama alta</td>
+            </tr>
+            <tr>
+                <td>Opteron</td>
+                <td>Servidor/procesador de 64 bits de gama alta. Para servidores de gama alta</td>
+            </tr>
+        </tbody>
+        
     </table>
     <hr>
 
@@ -89,30 +92,33 @@
                 <th class="parte-superior-derecha">Chips</th>
                 <th class="parte-superior-izquierda">Descripcion</th>
             </tr>
-            <tr>
-                <td>Celeron</td>
-                <td>Es la familia de chips económicos de Intel. Celeron es una buena opción para un ordenador económico, ya que ofrece rendimiento suficiente para un uso informático general</td>
-            </tr>
-            <tr>
-                <td>Celeron D </td>
-                <td>la última incorporación de Intel a la familia Celeron, más rápido que el Celeron normal, pero todavía más barato.</td>
-            </tr>
-            <tr>
-                <td>Pentium 3</td>
-                <td> es el actual chip de gama media de Intel</td>
-            </tr>
-            <tr>
-                <td>Pentium 4</td>
-                <td> Puede utilizarse en placas base compatibles con multiprocesadores</td>
-            </tr>
-            <tr>
-                <td>Pentium D</td>
-                <td>Es un chip de doble núcleo de gama alta. Contiene dos chips Pentium, es decir, dos procesadores en un solo chip.</td>
-            </tr>
-            <tr>
-                <td>Opteron</td>
-                <td> Una versión de gama alta del Xeon Pentium 4, diseñada para ordenadores de servidor y sistemas multiprocesador</td>
-            </tr>
+            <tbody>
+                <tr>
+                    <td>Celeron</td>
+                    <td>Es la familia de chips económicos de Intel. Celeron es una buena opción para un ordenador económico, ya que ofrece rendimiento suficiente para un uso informático general</td>
+                </tr>
+                <tr>
+                    <td>Celeron D </td>
+                    <td>la última incorporación de Intel a la familia Celeron, más rápido que el Celeron normal, pero todavía más barato.</td>
+                </tr>
+                <tr>
+                    <td>Pentium 3</td>
+                    <td> es el actual chip de gama media de Intel</td>
+                </tr>
+                <tr>
+                    <td>Pentium 4</td>
+                    <td> Puede utilizarse en placas base compatibles con multiprocesadores</td>
+                </tr>
+                <tr>
+                    <td>Pentium D</td>
+                    <td>Es un chip de doble núcleo de gama alta. Contiene dos chips Pentium, es decir, dos procesadores en un solo chip.</td>
+                </tr>
+                <tr>
+                    <td>Opteron</td>
+                    <td> Una versión de gama alta del Xeon Pentium 4, diseñada para ordenadores de servidor y sistemas multiprocesador</td>
+                </tr>
+            </tbody>
+            
         </table>
 
 
